fix: Fix the coin stats display issue on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,7 @@ a:hover {
 
 .stats-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 100px;
 }
@@ -185,6 +185,7 @@ a:hover {
   font-size: 1rem;
   opacity: 0.9;
   padding: 20px;
+  gap: 20px;
 }
 
 .coin-stats-name {
@@ -195,14 +196,6 @@ a:hover {
 
 .stats {
   font-weight: 800;
-}
-
-.coin-value-statistics {
-  width: 30%;
-}
-.coin-value-statistics-heading p {
-  font-size: 1rem;
-  opacity: 0.9;
 }
 
 .coin-desc-link {
